@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.15 2005/02/24 11:02:58 agc Exp $
+$NetBSD: distinfo,v 1.16 2005/04/04 22:05:29 reinoud Exp $
 
-SHA1 (UDFclient.0.3.3.tgz) = 0eb1d8e3c1408f8fbb7047e127e69d67c972dbbb
-RMD160 (UDFclient.0.3.3.tgz) = 54aedfd9f01f0d14cdcc11cc33875db131cb8df6
-Size (UDFclient.0.3.3.tgz) = 187473 bytes
+SHA1 (UDFclient.0.3.4.tgz) = bbc15d69f5320f3ded206a8740c7eda50cb4767f
+RMD160 (UDFclient.0.3.4.tgz) = a62277ac451448c8b1970ced7e4e7833895f7be4
+Size (UDFclient.0.3.4.tgz) = 188648 bytes
